force-app/main/default/objects/Zoom_Account_Configuration__c/Zoom_Account_Configuration__c.object-meta.xml
<CustomObject>
    <label>Zoom Account Configuration</label>
    <nameField>
        <label>Zoom Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zoom Account Configurations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>