force-app/main/default/objects/Zoom_Account_Configuration__c/fields/Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Id__c</fullName>
    <label>Client Id</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>