force-app/main/default/objects/Zoom_Account_Configuration__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <label>Code</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>