force-app/main/default/objects/Zoom_Account_Configuration__c/fields/Refresh_token__c.field-meta.xml
<CustomField>
    <fullName>Refresh_token__c</fullName>
    <label>Refresh token</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>