force-app/main/default/objects/Zoom_Account_Configuration__c/fields/Zoom_Account__c.field-meta.xml
<CustomField>
    <fullName>Zoom_Account__c</fullName>
    <label>Zoom Account</label>
    <referenceTo>Zoom_Account__c</referenceTo>
    <relationshipLabel>Zoom Account Configurations</relationshipLabel>
    <relationshipName>Zoom_Account_Configurations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>